# File-search-engine

./: .gitignore  CMakeLists.txt  README.md
src/: engine.cpp  engine.h  gui_main.cpp  main.cpp  thread_pool.cpp  thread_pool.h
